@@ -1,3 +1,8 @@
+2004-02-16  Bruno Haible  <bruno@clisp.org>
+
+	* stream.d (stream_get_read_eval, stream_set_read_eval): Invoke
+	instance_un_realloc.
+
 2004-02-15  Bruno Haible  <bruno@clisp.org>
 
 	Undo the 2001-11-27 patch, because it breaks in WIDE_SOFT mode with
